# zap-rs

./: Cargo.toml  README.md
src/: appimage.rs  args.rs  downloader.rs  error.rs  github.rs  index.rs  lib.rs  main.rs  manager.rs  paths.rs  symlink.rs  tui.rs  types.rs
