[package]
name = "zap-rs"
version = "0.2.0"
edition = "2024"
authors = ["Naz <ndpm13@ch-naseem.com>"]
description = "Rust-based AppImage package manager inspired by Zap"
repository = "https://git.ch-naseem.com/ndpm13/zap-rs"
homepage = "https://git.ch-naseem.com/ndpm13/zap-rs"
license = "MIT"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["from"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
futures-util = "0.3.31"
indicatif = { version = "0.18.0", features = ["improved_unicode"] }
octocrab = "0.44.1"
reqwest = { version = "0.12.22", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
